--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,11 @@ spring.cloud.stream.bindings.input.destination=personExchange
 # queue name (if not specified a default queue will be generated)
 spring.cloud.stream.bindings.input.group=person-queue
 
+
+
 # enable dql
-#spring.cloud.stream.rabbit.bindings.input.consumer.auto-bind-dlq=true
-#spring.cloud.stream.bindings.input.consumer.max-attempts=1
+spring.cloud.stream.rabbit.bindings.input.consumer.auto-bind-dlq=true
+#spring.cloud.stream.bindings.input.consumer.max-attempts=3
 #spring.cloud.stream.rabbit.bindings.input.consumer.requeue-rejected=true
 
 
